<resources>
    <string name="gameTitle">Kugle Spil</string>
    <string name="credits">Credits</string>
    <string name="highScore">High Scores</string>
    <string name="startGame">Start Game</string>
    <string name="homePage">Return</string>
    <string name="readyBtn">Ready ?</string>
    <string name="extra">Just Stuff</string>
    <string name="leftBtn">Left Button</string>
    <string name="rightBtn">Right Button</string>
    <string name="Exit">Return</string>
    <string name="seHighscore">Se The High scores! </string>
    <string name="cameraDescription">Taking a Picture</string>
    <string name="welcome">Welcome to this fun little game i have created</string>
    <string name="editPlayer"></string>
    <string name="editPoints"></string>
    <string name="editId"></string>
    <string name="deleteData">Delete Data</string>
    <string name="addPlayer">Add Player</string>
    <string name="addPlayerTitle">Please add player name</string>
    <string name="insertPlayerID">Insert Player ID</string>
    <string name="deletePlayer">Delete Player </string>
    <string name="loremIpSum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Phasellus faucibus scelerisque eleifend donec pretium vulputate sapien nec sagittis. Habitant morbi tristique senectus et netus et malesuada fames. Aliquet bibendum enim facilisis gravida neque convallis a cras. Et ligula ullamcorper malesuada proin. Auctor augue mauris augue neque gravida in fermentum et. Neque ornare aenean euismod elementum nisi quis eleifend quam adipiscing. Nisl nunc mi ipsum faucibus. Viverra tellus in hac habitasse platea dictumst. Arcu cursus vitae congue mauris rhoncus aenean vel elit scelerisque. Ultrices gravida dictum fusce ut placerat orci nulla pellentesque dignissim. Eu tincidunt tortor aliquam nulla facilisi cras. Morbi leo urna molestie at elementum eu facilisis sed.
Varius morbi enim nunc faucibus. Montes nascetur ridiculus mus mauris vitae ultricies. Nulla at volutpat diam ut venenatis. Eget egestas purus viverra accumsan in nisl nisi. Eu tincidunt tortor aliquam nulla facilisi cras. Platea dictumst vestibulum rhoncus est pellentesque elit. Purus semper eget duis at tellus at. Quis viverra nibh cras pulvinar mattis nunc sed blandit libero. Maecenas sed enim ut sem viverra aliquet eget. Aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Netus et malesuada fames ac. Dolor sit amet consectetur adipiscing elit. Amet justo donec enim diam vulputate ut pharetra. Iaculis urna id volutpat lacus. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Malesuada bibendum arcu vitae elementum curabitur vitae. Porta lorem mollis aliquam ut porttitor leo a diam sollicitudin. Ac orci phasellus egestas tellus rutrum.
    </string>


</resources>
